fix scrollbar

--- a/assets_src/css/stylesheet.less
+++ b/assets_src/css/stylesheet.less
@@ -196,9 +196,9 @@ td p {
 	}
 }
 
-.navbar .navbar-brand {
+/*.navbar .navbar-brand {
     max-width: ~"calc(100% - 60px)";
-}
+}*/
 
 @keyframes swipenotif {
 	0% {
